--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: #24b67e;
+  color: #be3131;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .color-a {
-  color: #24b67e;
+  color: #be3131;
 }
 
 .color-d {
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #24b67e;
+  background-color: #be3131;
 }
 
 .overlay-mf {
@@ -152,7 +152,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #24b67e;
+  background-color: #be3131;
   margin: 0 auto;
 }
 
@@ -171,7 +171,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #24b67e;
+  background-color: #be3131;
   width: 100px;
   bottom: -12px;
 }
@@ -208,12 +208,12 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #24b67e;
+  box-shadow: 0 0 0 3px #be3131;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #24b67e;
+  background-color: #be3131;
   color: #fff;
   box-shadow: 0 0 0 3px #bbf5df;
   transition: all 500ms ease;
@@ -238,7 +238,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #24b67e;
+  color: #be3131;
   margin-right: 10px;
 }
 
@@ -252,7 +252,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #24b67e;
+  box-shadow: 0 0 0 10px #be3131;
   display: block;
 }
 
@@ -299,7 +299,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #24b67e;
+  background-color: #be3131;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -318,7 +318,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #24b67e;
+  background: #be3131;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -356,7 +356,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #24b67e;
+  border-top: 6px solid #be3131;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -473,26 +473,26 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #24b67e;
+  color: #be3131;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #24b67e;
+  background-color: #be3131;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #24b67e;
+  color: #be3131;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #24b67e;
+  color: #be3131;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #24b67e;
+  color: #be3131;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -524,13 +524,13 @@ a:hover {
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #24b67e;
+  background-color: #be3131;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #24b67e;
+  background-color: #be3131;
 }
 
 /*-- Hamburger Navbar --*/
@@ -644,7 +644,7 @@ a:hover {
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #24b67e;
+  color: #be3131;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
@@ -690,7 +690,7 @@ a:hover {
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
   color: #fff;
-  background-color: #24b67e;
+  background-color: #be3131;
   box-shadow: 0 0 0 10px #bbf5df;
 }
 
